    * Item and hero autoset tags didn't update immediately (until something
      else did so) due to:
      -using items (including attacks and item consumption) outside of battle
      -the "use item" command (also, "use item in slot" updated tags but
       didn't update visible NPCs)
      -gaining/losing items from a textbox, until the textbox chain ended
      [Ralph]

  *** Stuff Only Developers Will Notice
    * Source code license has been changed to Dual GPLv2+ & MIT license
      by unanimous consent of all OHRRPGCE contributors [James, Ralph,
      Mike, Simon, David, Yuriy, Jay, Matthias, Adam, Lakan, Taoki,
      Daniel, SwordPlay, zzo38]
    * FreeBASIC 1.04+ now required to compile
    * UI in Battle (Hero names, meters, HP, status icons) are now all
      slice-based instead of hardcoded. It still looks the same by
      default! [James]


September 13 2021 [Hróðvitnir]

  *** New Features
    * Slice Editor:
      * Settings/tools menu (F8 to open). Lists most hotkeys. Includes new
        settings to show/hide the position and size of each slice. [Ralph]
      * Data organised into collapsible/expandable sections [Sword]
      * Press F in the slice editor to focus on a slice [Ralph]
      * Slice collections can be named. The name and collection ID are shown in
        the in-game slice debugger [Ralph]
      * In the position/size edit view hold Ctrl to change size/position instead
    * F8 debug menu option "Enable/Disable random battles" [Ralph]
    * Better, smoother screen fading in/out [Ralph]
    * Option (in General Settings Menu) to run in 24-bit color mode. Much nicer
      looking transparent sprites, but increases CPU usage [Ralph]
    * Attacks can have custom alignment relative to their targets [James]
    * There is now a global pool of NPC definitions that can be used on
      any map to supplement the local per-map NPCs [James]
    * Turn-based battle bit "Don't break Speed ties randomly" [Ralph]